WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
86347
[Qt] TextureMapperGL::drawTexture marked OVERRIDE but does not override any member function.
https://bugs.webkit.org/show_bug.cgi?id=86347
Summary
[Qt] TextureMapperGL::drawTexture marked OVERRIDE but does not override any m...
Zeno Albisser
Reported
2012-05-14 03:21:20 PDT
This bug was introduced by:
r116834
Attachments
patch for review.
(2.14 KB, patch)
2012-05-14 03:37 PDT
,
Zeno Albisser
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zeno Albisser
Comment 1
2012-05-14 03:37:22 PDT
Created
attachment 141681
[details]
patch for review.
Zeno Albisser
Comment 2
2012-05-14 04:02:48 PDT
Comment on
attachment 141681
[details]
patch for review. Clearing flags on attachment: 141681 Committed
r116931
: <
http://trac.webkit.org/changeset/116931
>
Zeno Albisser
Comment 3
2012-05-14 04:02:55 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug