[Qt] TextureMapperGL::drawTexture marked OVERRIDE but does not override any member function. https://bugs.webkit.org/show_bug.cgi?id=86347

This bug was introduced by r116834.
TextureMapperGL implements two drawTexture functions.
The first one takes a BitmapTexture as an argument and does override TextureMapper::drawTexture().
The second one takes a texture id as an argument and does not override any member function.

* platform/graphics/texmap/TextureMapperGL.h:

Canonical link: https://commits.webkit.org/103928@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116931 268f45cc-cd09-0410-ab3c-d52691b4dbfc